Start updating codebase
- update tests to JUnit5.

- change pom to only care about the args4j core.

- add @SuppressWarnings through codebase.