@@ -6,47 +6,44 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 
 /**
- * Starter class which uses reflection to instantiate the business
- * class, parse the command line parameters, sets the fields of the
- * business class and doing the help message handling.
- *  
+ * Starter class which uses reflection to instantiate the business class, parse the command line
+ * parameters, sets the fields of the business class and doing the help message handling.
+ * 
  * @author Jan Materne
  */
 public class Starter {
-	
+
 	/**
-	 * The name of the JavaVM property which stores the class name of
-	 * the business class.
-	 * {@value} 
+	 * The name of the JavaVM property which stores the class name of the business class. {@value}
 	 */
 	public static final String PARAMETER_NAME = "mainclass";
 
+	@SuppressWarnings({"rawtypes", "unchecked"})
 	public static void main(String[] args) {
 		String classname = System.getProperty(PARAMETER_NAME);
 		CmdLineParser parser = null;
 		boolean classHasArgument = false;
-		boolean classHasOptions  = false;
-		
+		boolean classHasOptions = false;
+
 		// Check the requirement: must specify the class to start
 		if (classname == null || "".equals(classname)) {
-			System.err.println("The system property '" 
-					+ PARAMETER_NAME
+			System.err.println("The system property '" + PARAMETER_NAME
 					+ "' must contain the classname to start.");
 			System.exit(-1);
 		}
-		
+
 		try {
 			Class clazz = Class.forName(classname);
-			Object bean = clazz.newInstance();
+			Object bean = clazz.getDeclaredConstructor().newInstance();
 			parser = new CmdLineParser(bean);
-			
+
 			// for help output
 			classHasArgument = hasAnnotation(clazz, Argument.class);
-			classHasOptions  = hasAnnotation(clazz, Option.class);
-			
+			classHasOptions = hasAnnotation(clazz, Option.class);
+
 			parser.parseArgument(args);
-			
-			// try starting   run()
+
+			// try starting run()
 			Method m;
 			boolean couldInvoke = false;
 			try {
@@ -60,31 +57,32 @@ public class Starter {
 			} catch (InvocationTargetException e) {
 			}
 
-			// try starting   run(String[])
-			if (!couldInvoke) try {
-				m = clazz.getMethod("run", String[].class);		
-				m.invoke(bean, new Object[]{args});
-				couldInvoke = true;
-			} catch (SecurityException e) {
-			} catch (IllegalArgumentException e) {
-				e.printStackTrace();
-			} catch (NoSuchMethodException e) {
-			} catch (IllegalAccessException e) {
-			} catch (InvocationTargetException e) {
-			}
+			// try starting run(String[])
+			if (!couldInvoke)
+				try {
+					m = clazz.getMethod("run", String[].class);
+					m.invoke(bean, new Object[] {args});
+					couldInvoke = true;
+				} catch (SecurityException e) {
+				} catch (IllegalArgumentException e) {
+					e.printStackTrace();
+				} catch (NoSuchMethodException e) {
+				} catch (IllegalAccessException e) {
+				} catch (InvocationTargetException e) {
+				}
 		} catch (ClassNotFoundException e) {
 			// wrong classpath setting
-			System.err.println("Cant find the class '" 
-					+ classname
-					+ "' as specified in the system property '"
-					+ PARAMETER_NAME + "'.");
+			System.err.println("Cant find the class '" + classname
+					+ "' as specified in the system property '" + PARAMETER_NAME + "'.");
 		} catch (CmdLineException e) {
 			// wrong argument enteres, so print the usage message as
 			// supplied by args4j
 			System.err.println(e.getMessage());
 			System.err.print(classname);
-			if (classHasOptions)  System.err.print(" [options]");
-			if (classHasArgument) System.err.print(" arguments");
+			if (classHasOptions)
+				System.err.print(" [options]");
+			if (classHasArgument)
+				System.err.print(" arguments");
 			System.err.println();
 			if (parser != null)
 				parser.printUsage(System.err);
@@ -95,15 +93,19 @@ public class Starter {
 		}
 	}
 
+	@SuppressWarnings({"rawtypes", "unchecked"})
 	public static boolean hasAnnotation(Class clazz, Class<? extends Annotation> annotation) {
-		if (clazz.getAnnotation(annotation)!=null) return true;
+		if (clazz.getAnnotation(annotation) != null)
+			return true;
 		for (Field f : clazz.getFields()) {
-			if (f.getAnnotation(annotation)!=null) return true;
+			if (f.getAnnotation(annotation) != null)
+				return true;
 		}
 		for (Method m : clazz.getMethods()) {
-			if (m.getAnnotation(annotation)!=null) return true;
+			if (m.getAnnotation(annotation) != null)
+				return true;
 		}
 		return false;
 	}
-	
+
 }
