@@ -6,6 +6,7 @@ import org.kohsuke.args4j.CmdLineParser;
 import org.kohsuke.args4j.Option;
 import org.kohsuke.args4j.OptionDef;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.AbstractList;
 import java.util.ResourceBundle;
 
@@ -13,16 +14,17 @@ import java.util.ResourceBundle;
  * {@link OptionHandler} used with {@link Argument} for parsing typical "sub-command" pattern.
  *
  * <p>
- * The "sub-command" pattern refers to the design of the command line like <tt>git</tt> and <tt>svn</tt>, where
- * the first argument to the command designates a sub-command (say <code>git checkout</code>), then everything
- * that follows afterward are parsed by this sub-command (which is usually different depending on
- * which sub-command was selected.)
+ * The "sub-command" pattern refers to the design of the command line like <tt>git</tt> and
+ * <tt>svn</tt>, where the first argument to the command designates a sub-command (say
+ * <code>git checkout</code>), then everything that follows afterward are parsed by this sub-command
+ * (which is usually different depending on which sub-command was selected.)
  *
  * <p>
  * This {@link OptionHandler} models this design pattern with the {@link SubCommands} annotation.
  * See the following example:
  *
- * <pre>{@code
+ * <pre>
+ * {@code
  * class Git {
  *      &#64;Argument(handler={@link SubCommandHandler}.class)
  *      &#64;SubCommands({
@@ -48,38 +50,37 @@ import java.util.ResourceBundle;
  *
  *     ...
  * }
- * }</pre>
+ * }
+ * </pre>
  *
  * <p>
  * An example of legal command line option for this is <code>-r checkout -a</code>.
  *
  * <ul>
- * <li>
- * {@link SubCommand} only works with {@link Argument} and not with {@link Option}.
+ * <li>{@link SubCommand} only works with {@link Argument} and not with {@link Option}.
  *
- * <li>
- * The same field/setter must be also annotated with {@link SubCommands} that specify possible sub-commands.
+ * <li>The same field/setter must be also annotated with {@link SubCommands} that specify possible
+ * sub-commands.
  *
- * <li>
- * Any {@link Option}s that you define in the <tt>Git</tt> class above can parse options that appear
- * prior to the sub-command name. This is useful for defining global options that work across sub-commands.
+ * <li>Any {@link Option}s that you define in the <tt>Git</tt> class above can parse options that
+ * appear prior to the sub-command name. This is useful for defining global options that work across
+ * sub-commands.
  *
- * <li>
- * The matching sub-command implementation gets instantiated with the default constructor,
- * then a new {@link CmdLineParser} will be created to parse its annotations.
+ * <li>The matching sub-command implementation gets instantiated with the default constructor, then
+ * a new {@link CmdLineParser} will be created to parse its annotations.
  *
- * <li>
- * The rest of the arguments that follow the sub-command will be parsed with this new {@link CmdLineParser}
+ * <li>The rest of the arguments that follow the sub-command will be parsed with this new
+ * {@link CmdLineParser}
  *
- * <li>
- * The fully populated sub-command instance is set as the value.
+ * <li>The fully populated sub-command instance is set as the value.
  * </ul>
  *
  * <p>
- * This class defines a number of protected methods that allow subtypes to customize various parts of the
- * behaviours. This should also serve as an example if you want to combine this with more sophisticated
- * sub-command lookup, such as through META-INF/services, <a href="http://sezpoz.java.net/">sezpoz</a>,
- * or <a href="https://github.com/jenkinsci/lib-annotation-indexer">annotation indexer</a>.
+ * This class defines a number of protected methods that allow subtypes to customize various parts
+ * of the behaviours. This should also serve as an example if you want to combine this with more
+ * sophisticated sub-command lookup, such as through META-INF/services,
+ * <a href="http://sezpoz.java.net/">sezpoz</a>, or
+ * <a href="https://github.com/jenkinsci/lib-annotation-indexer">annotation indexer</a>.
  *
  * @author Kohsuke Kawaguchi
  */
@@ -89,8 +90,9 @@ public class SubCommandHandler extends OptionHandler<Object> {
     public SubCommandHandler(CmdLineParser parser, OptionDef option, Setter<Object> setter) {
         super(parser, option, setter);
         commands = setter.asAnnotatedElement().getAnnotation(SubCommands.class);
-        if (commands==null)
-            throw new IllegalStateException("SubCommandHandler must be used with @SubCommands annotation");
+        if (commands == null)
+            throw new IllegalStateException(
+                    "SubCommandHandler must be used with @SubCommands annotation");
     }
 
     @Override
@@ -99,8 +101,8 @@ public class SubCommandHandler extends OptionHandler<Object> {
 
         for (SubCommand c : commands.value()) {
             if (c.name().equals(subCmd)) {
-                setter.addValue(subCommand(c,params));
-                return params.size();   // consume all the remaining tokens
+                setter.addValue(subCommand(c, params));
+                return params.size(); // consume all the remaining tokens
             }
         }
 
@@ -113,12 +115,12 @@ public class SubCommandHandler extends OptionHandler<Object> {
 
     protected Object subCommand(SubCommand c, final Parameters params) throws CmdLineException {
         Object subCmd = instantiate(c);
-        CmdLineParser p = configureParser(subCmd,c);
+        CmdLineParser p = configureParser(subCmd, c);
         p.parseArgument(new AbstractList<String>() {
             @Override
             public String get(int index) {
                 try {
-                    return params.getParameter(index+1);
+                    return params.getParameter(index + 1);
                 } catch (CmdLineException e) {
                     // invalid index was accessed.
                     throw new IndexOutOfBoundsException();
@@ -127,7 +129,7 @@ public class SubCommandHandler extends OptionHandler<Object> {
 
             @Override
             public int size() {
-                return params.size()-1;
+                return params.size() - 1;
             }
         });
         return subCmd;
@@ -139,11 +141,19 @@ public class SubCommandHandler extends OptionHandler<Object> {
 
     protected Object instantiate(SubCommand c) {
         try {
-            return c.impl().newInstance();
+            return c.impl().getDeclaredConstructor().newInstance();
         } catch (InstantiationException e) {
-            throw new IllegalStateException("Failed to instantiate "+c,e);
+            throw new IllegalStateException("Failed to instantiate " + c, e);
         } catch (IllegalAccessException e) {
-            throw new IllegalStateException("Failed to instantiate "+c,e);
+            throw new IllegalStateException("Failed to instantiate " + c, e);
+        } catch (IllegalArgumentException e) {
+            throw new IllegalStateException("Failed to instantiate " + c, e);
+        } catch (InvocationTargetException e) {
+            throw new IllegalStateException("Failed to instantiate " + c, e);
+        } catch (NoSuchMethodException e) {
+            throw new IllegalStateException("Failed to instantiate " + c, e);
+        } catch (SecurityException e) {
+            throw new IllegalStateException("Failed to instantiate " + c, e);
         }
     }
 
